# DeepVelo

./: .gitignore  .readthedocs.yaml  README.md  environment.yml  pyproject.toml
data/: MDT_data_prepare.py
data/data_preprocessing/cao_organogenesis/: README.md  environment.yaml  process2anndata.py
data/data_preprocessing/cao_organogenesis/scripts/: alevin_fry_data_dl.sh  cao_et_al_get_quant.R  cao_et_al_update_anno.R
data/data_preprocessing/hindbrain_dev/: README.md  Snakefile  config.json  environment.yaml
data/data_preprocessing/hindbrain_dev/scripts/: loom_metadata.py  loom_subset.py  loompy_combine.py  metadata.py  mouse_download.sh
deepvelo/: parse_config.py  train.py
deepvelo/base/: base_trainer.py
deepvelo/data_loader/: data_loaders.py
deepvelo/logger/: logger.py
deepvelo/model/: layers.py  loss.py  model.py
deepvelo/trainer/: trainer.py
deepvelo/utils/: __init__.py  confidence.py  plot.py  preprocess.py  scatter.py  util.py  velocity.py
docs/: conf.py  index.rst  requirements.txt
examples/: README.md  computation_time_plot.ipynb  figure3(d-h).ipynb  figure4_hindbrain.ipynb  minimal_example.ipynb  mouse_gastrulation.py  multifacet_check.py  sweep.yaml  sweep_robustness.py  sweep_robustness.yaml
examples/r_analysis/: README.md  env.yaml
examples/r_analysis/helpers/: scIB_knit_table.R
examples/r_analysis/scripts/: 00_extra_package_installs.R  01_deepvelo_marker_analysis.R  02_deepvelo_scvelo_pathway_analysis.R  03_deepvelo_scvelo_activepathways_results_analysis.R  04_deepvelo_tf_driver_analysis.R  05_supplementary_table_formatting.R  06_full_scores_dotplot.R
tests/: scvelo_test.py  test.py
