[tool.poetry]
name = "deepvelo"
version = "0.2.8"
description = "Deep Velocity"
authors = ["subercui <subercui@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/bowang-lab/DeepVelo"
repository = "https://github.com/bowang-lab/DeepVelo"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
scvelo = "^0.2.4"
torch = ">=1.2,<1.13"
umap-learn = ">=0.5.2,<=0.5.4"
seaborn = "^0.11.2"
adjustText = "^0.7.3"
scanpy = "^1.8.2"
numpy = "^1.21.1"
tqdm = "^4.62.3"
matplotlib = ">=3.3,<3.6"
dgl = { version = ">=0.4,!=0.8.0.post1,<0.9", markers="extra!='gpu'" }
dgl-cu102 = { version = ">=0.4,!=0.8.0.post1,<0.9", optional = true }
igraph = "^0.9.10"
hnswlib = "^0.6.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.7.0"
cellrank = { version = "1.5.0", optional = true }

[tool.poetry.extras]
gpu = ["dgl-cu102"]
cellrank = ["cellrank>=1.5.0"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
